tests/ui/attributes/attrs-on-params.stderr
error: allow, cfg, cfg_attr, deny, expect, forbid, and warn are the only allowed built-in attributes in function parameters
  --> $DIR/attrs-on-params.rs:3:13
   |
LL | fn function(#[inline] param: u32) {
   |             ^^^^^^^^^

error: `#[inline]` attribute cannot be used on function params
  --> $DIR/attrs-on-params.rs:3:13
   |
LL | fn function(#[inline] param: u32) {
   |             ^^^^^^^^^
   |
help: `#[inline]` can be applied to functions
  --> $DIR/attrs-on-params.rs:3:13
   |
LL | fn function(#[inline] param: u32) {
   |             ^^^^^^^^^

error: aborting due to 2 previous errors

